--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,7 @@ knitr::opts_chunk$set(
 )
 ```
 [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/RobertMyles/XKCDdata?branch=master&svg=true)](https://ci.appveyor.com/project/RobertMyles/XKCDdata)
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/XKCDdata)](https://cran.r-project.org/package=XKCDdata)
 
 # XKCDdata
 
