--- a/README.Rmd
+++ b/README.Rmd
@@ -13,17 +13,16 @@ knitr::opts_chunk$set(
   fig.path = "README-"
 )
 ```
-[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/RobertMyles/XKCDdata?branch=master&svg=true)](https://ci.appveyor.com/project/RobertMyles/XKCDdata)
-[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/XKCDdata)](https://cran.r-project.org/package=XKCDdata)
 
 # XKCDdata
 
 XKCDdata is a little package to get data from individual [xkcd](https://xkcd.com/) comics.
 
 ## Installation
-From CRAN:  
+ 
 ```{r eval = FALSE}
-install.packages("XKCDdata")
+# install.packages("devtools")
+devtools::install_github("RobertMyles/XKCDdata")
 ```
 
 ## Example:  
