--- a/README.Rmd
+++ b/README.Rmd
@@ -27,7 +27,7 @@ devtools::install_github("RobertMyles/XKCDdata")
 
 ## Example:  
 
-Let's get this comic (it's number 1421):  
+Let's get data on this comic (it's number 1421):  
 
 ![https://imgs.xkcd.com/comics/future_self.png](https://imgs.xkcd.com/comics/future_self.png) 
 
@@ -49,3 +49,11 @@ purrr::map_df(cm, get_comic)
 ```
 
 Then you could plot it XKCD-style with the [xkcd](http://xkcd.r-forge.r-project.org/) package if you wanted. 
+
+## Viewing Comics
+
+Thanks to [Colin](https://github.com/ColinFay), you can view the comics inside your default Viewer (in the Viewer pane if you're on RStudio)! Give it a shot with:  
+
+```{r}
+print_xkcd(1)
+```
